# roblox-hitius-sourcecode

./: .gitignore  CMakeLists.txt  CustomBuildRules.props  CustomBuildRules.rules  CustomBuildRules.targets  CustomBuildRules.xml  README.md  Roblox.Test.vsmdi  Roblox.sln  RobloxDebugVisualizers.txt  RobloxPlayer-Info.plist  buildshaders.bat  buildshaders.sh
Android/: CMakeLists.txt  robloxAndroidPK_DO_NOT_DELETE  settings.gradle
Android/NativeShell/: .classpath  .cproject  .project  AndroidManifest.xml  build.gradle  build.xml  crashlytics.properties  how_to_debug_cpp.txt  how_to_make_an_internal_build.txt  lint.xml  packAndroidAssets.sh  proguard-project.txt  project.properties
Android/NativeShell/jni/: Android.mk  Application.mk
Android/RobloxAndroidTests/: build.xml  local.properties
Android/google_play_services/: source.properties
Android/gradle/: local.properties
Android/gradle/wrapper/: gradle-wrapper.properties
Android/libroblox/: AndroidSettingsService.cpp  AndroidSettingsService.h  FunctionMarshaller.cpp  FunctionMarshaller.h  JNIActivityCurlTest.cpp  JNICurlTestHelper.cpp  JNIGLActivity.cpp  JNIGLActivity.h  JNIInputListener.cpp  JNIMain.cpp  JNIMain.h  JNIRobloxSettings.cpp  JNIUtil.cpp  JNIUtil.h  LogManager.cpp  LogManager.h  PlaceLauncher.cpp  PlaceLauncher.h  RobloxInfo.cpp  RobloxInfo.h  RobloxInput.cpp  RobloxInput.h  RobloxUtilities.cpp  RobloxUtilities.h  RobloxView.cpp  RobloxView.h  Teleporter.cpp  Teleporter.h
App.BulletPhysics/: App.BulletPhysics.vcxproj  App.BulletPhysics.vcxproj.filters  CMakeLists.txt  btBulletCollisionCommon.h  stdafx.h
App.BulletPhysics/App.BulletPhysics.xcodeproj/: project.pbxproj
App.BulletPhysics/BulletCollision/BroadphaseCollision/: btAxisSweep3.cpp  btBroadphaseProxy.cpp  btBroadphaseProxy.h  btCollisionAlgorithm.cpp  btDbvt.cpp  btDbvtBroadphase.cpp  btDispatcher.cpp  btMultiSapBroadphase.cpp  btOverlappingPairCache.cpp  btQuantizedBvh.cpp  btSimpleBroadphase.cpp
App.BulletPhysics/BulletCollision/CollisionDispatch/: SphereTriangleDetector.cpp  btActivatingCollisionAlgorithm.cpp  btBox2dBox2dCollisionAlgorithm.cpp  btBoxBoxCollisionAlgorithm.cpp  btBoxBoxDetector.cpp  btCollisionDispatcher.cpp  btCollisionObject.cpp  btCollisionWorld.cpp  btCompoundCollisionAlgorithm.cpp  btCompoundCompoundCollisionAlgorithm.cpp  btConvex2dConvex2dAlgorithm.cpp  btConvexConcaveCollisionAlgorithm.cpp  btConvexConvexAlgorithm.cpp  btConvexPlaneCollisionAlgorithm.cpp  btDefaultCollisionConfiguration.cpp  btEmptyCollisionAlgorithm.cpp  btGhostObject.cpp  btHashedSimplePairCache.cpp  btInternalEdgeUtility.cpp  btManifoldResult.cpp  btUnionFind.cpp  (+4 more)
App.BulletPhysics/LinearMath/: btAlignedAllocator.cpp  btConvexHull.cpp  btConvexHullComputer.cpp  btGeometryUtil.cpp  btPolarDecomposition.cpp  btQuickprof.cpp  btSerializer.cpp  btVector3.cpp
Base/: Base.vcxproj  Base.vcxproj.filters  CMakeLists.txt  HardwareInfo.cpp  RbxAssert.cpp  RbxFormat.cpp  cpucount.cpp
Base/Base.xcodeproj/: project.pbxproj
Base/include/: CPUCount.h  HardwareInfo.h  RbxAssert.h  RbxBase.h  RbxFormat.h  RbxHash.h  RbxPlatform.h  SelectState.h  XStudioBuild.h
Base/rbx/: CEvent.cpp  Crypt.cpp  MathUtil.cpp  Memory.cpp  ProcessPerfCounter.cpp  Profiler.cpp  Signal.cpp  TaskScheduler.Job.cpp  TaskScheduler.Thread.cpp  TaskScheduler.cpp  ThreadSafe.cpp  Time.cpp  boost.cpp
Base/util/: Debug.cpp  Log.cpp  RbxCrash.cpp  RegistryUtil.cpp  StreamHelpers.cpp
Network/: API.cpp  BoostAppend.cpp  BoostAppend.h  CMakeLists.txt  ChatFilter.cpp  Client.cpp  Client.h  ClientReplicator.cpp  ClientReplicator.h  ClusterUpdateBuffer.cpp  ClusterUpdateBuffer.h  Compressor.cpp  Compressor.h  ConcurrentRakPeer.cpp  ConcurrentRakPeer.h  CrashReporter.cpp  DataBlockEncryptor.cpp  DataBlockEncryptor.h  Dictionary.cpp  Dictionary.h  DirectPhysicsReceiver.cpp  DirectPhysicsReceiver.h  ErrorCompPhysicsSender.cpp  ErrorCompPhysicsSender.h  ErrorCompPhysicsSender2.cpp  ErrorCompPhysicsSender2.h  GameConfigurer.cpp  GamePerfMonitor.cpp  GamePerfMonitor.h  GuidRegistryService.cpp  GuidRegistryService.h  InterpolatingPhysicsReceiver.cpp  InterpolatingPhysicsReceiver.h  Item.cpp  Item.h  Marker.cpp  Marker.h  MechanismItem.cpp  MechanismItem.h  MovementHistoryJob.cpp  (+82 more)
Network/Network.xcodeproj/: project.pbxproj
Rendering/AppDraw/: AppDraw.vcxproj  AppDraw.vcxproj.filters  CMakeLists.txt  Draw.cpp  DrawAdorn.cpp  HitTest.cpp  ReadMe.txt
Rendering/GfxBase/: Adorn.cpp  AdornBillboarder.cpp  AdornBillboarder2D.cpp  AdornSurface.cpp  CMakeLists.txt  FileMeshData.cpp  FrameRateManager.cpp  GfxBase.vcxproj  GfxBase.vcxproj.filters  GfxPart.cpp  IAdornableCollector.cpp  PartIdentifier.cpp  RenderCaps.cpp  RenderSettings.cpp  RenderStats.cpp  ViewBase.cpp  ViewportBillboarder.cpp
Rendering/GfxCore/: CMakeLists.txt  Device.cpp  DeviceCreate.cpp  Framebuffer.cpp  Geometry.cpp  GfxCore.vcxproj  GfxCore.vcxproj.filters  Resource.cpp  Shader.cpp  States.cpp  Texture.cpp  pix.cpp
Rendering/GfxRender/: AdornRender.cpp  AdornRender.h  CMakeLists.txt  CullableSceneNode.cpp  CullableSceneNode.h  CustomEmitter.cpp  CustomEmitter.h  Emitter.cpp  Emitter.h  EmitterShared.h  EnvMap.cpp  EnvMap.h  ExplosionEmitter.cpp  ExplosionEmitter.h  FastCluster.cpp  FastCluster.h  GeometryGenerator.cpp  GeometryGenerator.h  GfxRender.vcxproj  GfxRender.vcxproj.filters  GlobalShaderData.cpp  GlobalShaderData.h  Image.cpp  Image.h  ImageInfo.h  LightGrid.cpp  LightGrid.h  LightObject.cpp  LightObject.h  Material.cpp  Material.h  MaterialGenerator.cpp  MaterialGenerator.h  MegaCluster.cpp  MegaCluster.h  ObjectExporter.cpp  ObjectExporter.h  ParticleEmitter.cpp  ParticleEmitter.h  RenderCamera.cpp  (+45 more)
Rendering/RbxG3D/: CMakeLists.txt  Frustum.cpp  RbxCamera.cpp  RbxG3D.vcxproj  RbxG3D.vcxproj.filters  RbxRay.cpp
Rendering/g3d/: CMakeLists.txt  graphics3D.vcxproj  graphics3D.vcxproj.filters
boostlibs/: CMakeLists.txt  boost.static.vcxproj  boost.static.vcxproj.filters  boost.test.vcxproj  boost.test.vcxproj.filters
boostlibs/boost.xcodeproj/: project.pbxproj
boostlibs/boostTest/: boostTestTarget.xcconfig
(+4598 files in other folders)
