include(Curl)
include(Breakpad)
include(App)
include(Network)
include(Rendering)
include(ClientShared)

include_project_files(Android "*")

list(APPEND HEADERS libroblox/AndroidSettingsService.h)
list(APPEND SOURCES libroblox/AndroidSettingsService.cpp)
list(APPEND HEADERS libroblox/JNIMain.h)
list(APPEND SOURCES libroblox/JNIMain.cpp)
list(APPEND SOURCES libroblox/JNIActivityCurlTest.cpp)
list(APPEND SOURCES libroblox/JNICurlTestHelper.cpp)
list(APPEND SOURCES libroblox/JNIGLActivity.cpp)
list(APPEND SOURCES libroblox/JNIInputListener.cpp)
list(APPEND SOURCES libroblox/JNIRobloxSettings.cpp)
list(APPEND HEADERS libroblox/JNIUtil.h)
list(APPEND SOURCES libroblox/JNIUtil.cpp)
list(APPEND HEADERS libroblox/LogManager.h)
list(APPEND SOURCES libroblox/LogManager.cpp)
list(APPEND HEADERS libroblox/PlaceLauncher.h)
list(APPEND SOURCES libroblox/PlaceLauncher.cpp)
list(APPEND HEADERS libroblox/RobloxView.h)
list(APPEND SOURCES libroblox/RobloxView.cpp)
list(APPEND HEADERS libroblox/FunctionMarshaller.h)
list(APPEND SOURCES libroblox/FunctionMarshaller.cpp)
list(APPEND SOURCES libroblox/RobloxInfo.cpp)
list(APPEND HEADERS libroblox/RobloxInfo.h)
list(APPEND SOURCES libroblox/RobloxUtilities.cpp)
list(APPEND HEADERS libroblox/RobloxUtilities.h)
list(APPEND SOURCES libroblox/RobloxInput.cpp)
list(APPEND HEADERS libroblox/Teleporter.h)
list(APPEND SOURCES libroblox/Teleporter.cpp)
list(APPEND HEADERS libroblox/RobloxInput.h)
list(APPEND HEADERS ../ClientBase/RenderSettingsItem.h)
list(APPEND SOURCES ../ClientBase/RenderSettingsItem.cpp)

# This is GPL code and cannot be shipped.
#
#	list(APPEND HEADERS libroblox/JNIProfiler/gmon.h)
#	list(APPEND HEADERS libroblox/JNIProfiler/gmon_out.h)
#	list(APPEND HEADERS libroblox/JNIProfiler/prof.h)
#	list(APPEND HEADERS libroblox/JNIProfiler/read_maps.h)
#	list(APPEND HEADERS libroblox/JNIProfiler/ucontext.h)
#	list(APPEND SOURCES libroblox/JNIProfiler/gnu_mcount.S)
#	list(APPEND SOURCES libroblox/JNIProfiler/prof.c)
#	list(APPEND SOURCES libroblox/JNIProfiler/read_maps.c)

add_library(Android OBJECT ${SOURCES} ${HEADERS})
