include(Boost)
include(tbb)
include(Base)

include_project_files(Base "*")

include_directories(include)

if(UNIX)
  list(APPEND SOURCES rbx/Unix/Crypt.cpp)
endif(UNIX)

if(ANDROID)
  list(APPEND HEADERS include/rbx/Android/ifaddrs.h)

  list(APPEND SOURCES rbx/Android/ifaddrs.c)
  list(APPEND SOURCES rbx/Android/SystemUtil.cpp)
elseif(WIN32)
  list(APPEND HEADERS rbx/Win/WindowsUtil.h)

  list(APPEND SOURCES rbx/Win/WindowsUtil.cpp)
  list(APPEND SOURCES rbx/Crypt.cpp)
  list(APPEND SOURCES rbx/Win/SystemUtil.cpp)
  list(APPEND SOURCES util/RegistryUtil.cpp)
elseif(APPLE)
  list(APPEND SOURCES rbx/Darwin/SystemUtil.cpp)
endif(ANDROID)

list(APPEND HEADERS include/HardwareInfo.h)
list(APPEND HEADERS include/RbxFormat.h)
list(APPEND HEADERS include/RbxPlatform.h)
list(APPEND HEADERS include/RbxHash.h)
list(APPEND HEADERS include/RbxBase.h)
list(APPEND HEADERS include/rbx/ProcessPerfCounter.h)
list(APPEND HEADERS include/rbx/object_pool.h)
list(APPEND HEADERS include/rbx/signal.h)
list(APPEND HEADERS include/rbx/RbxDbgInfo.h)
list(APPEND HEADERS include/rbx/RbxStrings.h)
list(APPEND HEADERS include/rbx/CEvent.h)
list(APPEND HEADERS include/rbx/Tasks/Coordinator.h)
list(APPEND HEADERS include/rbx/threadsafe.h)
list(APPEND HEADERS include/rbx/DenseHash.h)
list(APPEND HEADERS include/rbx/GlobalVectorItem.h)
list(APPEND HEADERS include/rbx/TaskScheduler.Job.h)
list(APPEND HEADERS include/rbx/RunningAverage.h)
list(APPEND HEADERS include/rbx/TaskScheduler.h)
list(APPEND HEADERS include/rbx/Debug.h)
list(APPEND HEADERS include/rbx/atomic.h)
list(APPEND HEADERS include/rbx/intrusive_weak_ptr.h)
list(APPEND HEADERS include/rbx/Intrusive/Set.h)
list(APPEND HEADERS include/rbx/rbxTime.h)
list(APPEND HEADERS include/rbx/BaldPtr.h)
list(APPEND HEADERS include/rbx/make_shared.h)
list(APPEND HEADERS include/rbx/Memory.h)
list(APPEND HEADERS include/rbx/Log.h)
list(APPEND HEADERS include/rbx/SystemUtil.h)
list(APPEND HEADERS include/rbx/callable.h)
list(APPEND HEADERS include/rbx/MathUtil.h)
list(APPEND HEADERS include/rbx/intrusive_ptr_target.h)
list(APPEND HEADERS include/rbx/Declarations.h)
list(APPEND HEADERS include/rbx/Crypt.h)
list(APPEND HEADERS include/rbx/Nil.h)
list(APPEND HEADERS include/rbx/trie.h)
list(APPEND HEADERS include/util/RegistryUtil.h)
list(APPEND HEADERS include/util/ublas_ext.h)
list(APPEND HEADERS include/util/stringbuffer.h)
list(APPEND HEADERS include/util/SafeToLower.h)
list(APPEND HEADERS include/util/ScopedSingleton.h)
list(APPEND HEADERS include/SelectState.h)
list(APPEND HEADERS include/CPUCount.h)
list(APPEND HEADERS include/RbxAssert.h)

list(APPEND SOURCES ../ClientShared/Mobile/CookiesEngine.cpp)
list(APPEND SOURCES ../ClientShared/SimpleJSON.cpp)
list(APPEND SOURCES ../ClientShared/format_string.cpp)

list(APPEND SOURCES cpucount.cpp)
list(APPEND SOURCES RbxAssert.cpp)
list(APPEND SOURCES RbxFormat.cpp)

list(APPEND SOURCES rbx/MathUtil.cpp)
list(APPEND SOURCES rbx/boost.cpp)
list(APPEND SOURCES rbx/CEvent.cpp)
list(APPEND SOURCES rbx/Memory.cpp)
list(APPEND SOURCES rbx/ProcessPerfCounter.cpp)
list(APPEND SOURCES rbx/Profiler.cpp)
list(APPEND SOURCES rbx/Signal.cpp)
list(APPEND SOURCES rbx/TaskScheduler.cpp)
list(APPEND SOURCES rbx/TaskScheduler.Job.cpp)
list(APPEND SOURCES rbx/TaskScheduler.Thread.cpp)
list(APPEND SOURCES rbx/ThreadSafe.cpp)
list(APPEND SOURCES rbx/Time.cpp)
list(APPEND SOURCES include/rbx/RbxDbgInfo.cpp)

list(APPEND SOURCES rbx/Tasks/Coordinator.cpp)

list(APPEND SOURCES util/Debug.cpp)
list(APPEND SOURCES util/Log.cpp)
list(APPEND SOURCES util/RbxCrash.cpp)
list(APPEND SOURCES util/StreamHelpers.cpp)

add_library(Base OBJECT ${SOURCES} ${HEADERS})
